Fixed custom scrollbar not appearing.

--- a/angular-universe/src/styles.css
+++ b/angular-universe/src/styles.css
@@ -19,6 +19,20 @@ body::before {
     z-index: -1;
 }
 
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--dark2);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--main);
+    border-radius: 4px;
+    border: none;
+}
+
 @media screen and (max-width: 480px) {
     body {
         background: rgba(0, 0, 0, 0.7);
